remove valid_spec field + DB update method
