# api/v1alpha1/openapi.yaml
@@ -261,14 +261,6 @@ components:
             schemas (VMSpec, ContainerSpec, DatabaseSpec, or ClusterSpec).
           additionalProperties: true
           minProperties: 1
-        valid_spec:
-          type: object
-          readOnly: true
-          description: |
-            Service specification following one of the supported service type
-            schemas (VMSpec, ContainerSpec, DatabaseSpec, or ClusterSpec).
-            This Spec has been validated and possibly mutated by DCM Policy Engine.
-            Hence its value may differ from the spec field (original intention of the user).
         approval_status:
           type: string
           readOnly: true
